[package]
name = "open-doip"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Open DoIP is an open-source Diagnostic Over Internel Protocol implementation in Rust."
homepage = "http://openautodiag.org"
repository = "https://github.com/OpenAutoDiag/open-doip"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doip-tokio = { git = "ssh://git@github.com/OpenAutoDiag/external-doip.git", branch = "main" }
